# Browsers_MasterKey_Extractor

./: README.md  browserCredDecryptor.py
1-Extract Master Keys/include/: BrowserKeyExtract.h  base64.h
1-Extract Master Keys/src/: base64.cpp  main.cpp
2-Decrypt Credentials/: browser_decrypt.py  firefox_decrypt.py
Extract Master Keys/: CMakeLists.txt
Extract Master Keys/include/: BrowserKeyExtract.h  utility.h
Extract Master Keys/src/: BrowserKeyExtract.cpp  main.cpp  utility.cpp
